tests/compile_fail/on_a_function_with_default_return_type.stderr
error: default return types are not supported
 --> tests/compile_fail/on_a_function_with_default_return_type.rs:3:1
  |
3 | #[memoized(key_expr = ())]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
